# tinyPrompt

./: LICENSE  README.md
linux_test/: Makefile  linux_test_main.c
pi_pico_test/: CMakeLists.txt  README.MD  main.c
src/: ascii_code.h  debug.h  tiny_prompt.c  tiny_prompt.h
